# ntrip-haskell

./: caster.conf  ntrip.cabal
Network/Ntrip/: Caster.hs
Network/Ntrip/Caster/: NtripClient.hs  NtripServer.hs  Sourcetable.hs  Types.hs
